[HAB-50] Rely on Commons for extracted utility functions